--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 .navbar {
     display: flex;
+    margin-bottom: 20px;
     justify-content: space-between;
     margin-top: 20px;
     padding: 10px 20px;
@@ -15,23 +16,22 @@
     align-items: center;
 }
 .nav-button {
-
+    text-decoration: none;
     padding: 12px 22px;
     background-color: #39FF14;
     color: white;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 35px;
-    margin-right: 80px;
+    margin-left: 17px;
+    margin-right: 40px;
     margin-bottom: 20px;
-    height: 35px;
     font-weight: bold;
 }
 .nav-text {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 20px;
+    margin:0px 17px 20px 40px;
 }
 .nav-text-image {
     margin-right: 5px;
@@ -50,60 +50,44 @@ body {
     background-color: #040720;
     font-family: Arial, Helvetica, sans-serif;
 }
-.one {
-    margin-top: 4%;
-    margin-bottom: 0;
-    font-size: 75px;
+
+.content {
     text-align: center;
 }
-.two {
+
+.main-text {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 75px;
     text-align: center;
 }
-.main {
+
+.sub-text {
     text-align: center;
     margin-top: 1%;
     font-size: 25px;
-    margin-bottom: 0;
+    margin-bottom: 2px;
 }
-.pp {
-    margin-top: 2px;
-    text-align: center;
-    font-size: 25px;
-}
-.naver {
-    padding: 12px 22px;
+
+.main-button {
+    margin-top: 20px;
+    height: 50px;
+    width: 200px;
+    color: white;
     background-color: #39FF14;
-    color: black;
+    padding: 12px 22px;
+    font-weight: bolder;
+    font-size: 20px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-left: 35px;
-    margin-right: 80px;
-    height: 50px;
-    width: 200px;
-    font-weight: bolder;
-    font-size: 20px;
-    margin: 0;
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .Tasker {
     font-weight: bolder;
 }
  
-
-a { 
-    text-decoration: none;
-    color: black;
-}
-
-.hello {
+.nav-title {
     color: #39FF14;
     font-size: 40px;
 }
