--- a/index.css
+++ b/index.css
@@ -1,20 +1,26 @@
+body {
+    color: whitesmoke;
+    background-color: #040720;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .navbar {
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 20px;
     justify-content: space-between;
+    align-items: center;
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #040720;
     color: #39FF14;
 }
-.nav-left {
+
+.nav-left, .nav-right {
     display: flex;
     align-items: center;
 }
-.nav-right {
-    display: flex;
-    align-items: center;
-}
+
 .nav-button {
     text-decoration: none;
     padding: 12px 22px;
@@ -28,44 +34,43 @@
     margin-bottom: 20px;
     font-weight: bold;
 }
+
 .nav-text {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin:0px 17px 20px 40px;
+    margin: 0px 17px 20px 40px;
 }
+
 .nav-text-image {
     margin-right: 5px;
     height: 80px;
     transform: rotate(2deg);
 }
+
 .nav-logo {
-    height: 120px;
-    margin-left: 35px;
+    height: 80px; /* Adjusted for better responsiveness */
+    margin-left: 10px; /* Adjusted for better responsiveness */
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 0;
 }
-body {
-    color: whitesmoke;
-    background-color: #040720;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .content {
     text-align: center;
+    padding: 20px; /* Added padding for better spacing on mobile */
 }
 
 .main-text {
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 75px;
+    font-size: 50px; /* Adjusted font size for better responsiveness */
     text-align: center;
 }
 
 .sub-text {
     text-align: center;
     margin-top: 1%;
-    font-size: 25px;
+    font-size: 20px; /* Adjusted font size for better responsiveness */
     margin-bottom: 2px;
 }
 
@@ -89,5 +94,38 @@ body {
  
 .nav-title {
     color: #39FF14;
-    font-size: 40px;
+    font-size: 30px; /* Adjusted font size for better responsiveness */
+}
+
+@media (max-width: 599px) {
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-left, .nav-right {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-button {
+        margin: 10px 0;
+    }
+
+    .nav-text {
+        margin: 10px 0;
+    }
+
+    .nav-logo {
+        height: 60px; /* Further adjustment for very small screens */
+        margin-left: 0;
+    }
+
+    .main-text {
+        font-size: 40px; /* Further adjustment for very small screens */
+    }
+
+    .sub-text {
+        font-size: 18px; /* Further adjustment for very small screens */
+    }
 }
