--- a/index.css
+++ b/index.css
@@ -4,13 +4,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Navbar styles */
 .navbar {
     display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
+    flex-wrap: wrap; /* Allows wrapping in small screens */
     justify-content: space-between;
     align-items: center;
-    margin-top: 20px;
+    margin: 20px 0;
     padding: 10px 20px;
     background-color: #040720;
     color: #39FF14;
@@ -31,28 +31,18 @@ body {
     cursor: pointer;
     margin-left: 17px;
     margin-right: 40px;
-    margin-bottom: 20px;
     font-weight: bold;
 }
 
 .nav-text {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0px 17px 20px 40px;
-}
-
-.nav-text-image {
-    margin-right: 5px;
-    height: 80px;
-    transform: rotate(2deg);
+    margin: 0 17px;
 }
 
 .nav-logo {
     height: 80px; /* Adjusted for better responsiveness */
-    margin-left: 10px; /* Adjusted for better responsiveness */
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
+    margin: 0 10px;
 }
 
 .content {
@@ -88,32 +78,32 @@ body {
     cursor: pointer;
 }
 
-.Tasker {
-    font-weight: bolder;
-}
- 
 .nav-title {
     color: #39FF14;
     font-size: 30px; /* Adjusted font size for better responsiveness */
 }
 
+/* Media queries for small screens */
 @media (max-width: 599px) {
     .navbar {
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: center;
         align-items: center;
     }
 
     .nav-left, .nav-right {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
+        margin: 0;
     }
 
-    .nav-button {
-        margin: 10px 0;
+    .nav-right {
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
-    .nav-text {
-        margin: 10px 0;
+    .nav-button, .nav-text {
+        margin: 10px 0; /* Adjust margins for better spacing */
     }
 
     .nav-logo {
