--- a/index.css
+++ b/index.css
@@ -2,18 +2,19 @@ body {
     color: whitesmoke;
     background-color: #040720;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-/* Navbar styles */
 .navbar {
     display: flex;
-    flex-wrap: wrap; /* Allows wrapping in small screens */
+    flex-wrap: nowrap; /* Prevent wrapping */
     justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
     padding: 10px 20px;
     background-color: #040720;
     color: #39FF14;
+    margin: 20px 0;
 }
 
 .nav-left, .nav-right {
@@ -30,7 +31,6 @@ body {
     border-radius: 10px;
     cursor: pointer;
     margin-left: 17px;
-    margin-right: 40px;
     font-weight: bold;
 }
 
@@ -47,7 +47,7 @@ body {
 
 .content {
     text-align: center;
-    padding: 20px; /* Added padding for better spacing on mobile */
+    padding: 20px;
 }
 
 .main-text {
@@ -86,29 +86,27 @@ body {
 /* Media queries for small screens */
 @media (max-width: 599px) {
     .navbar {
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
     }
 
     .nav-left, .nav-right {
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
-        margin: 0;
-    }
-
-    .nav-right {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .nav-button, .nav-text {
-        margin: 10px 0; /* Adjust margins for better spacing */
     }
 
     .nav-logo {
         height: 60px; /* Further adjustment for very small screens */
-        margin-left: 0;
+        margin: 0;
+    }
+
+    .nav-title {
+        font-size: 24px; /* Further adjustment for very small screens */
+        text-align: center;
+    }
+
+    .nav-button, .nav-text {
+        margin: 10px 0; /* Adjust margins for better spacing */
     }
 
     .main-text {
