--- a/index.css
+++ b/index.css
@@ -1,26 +1,20 @@
-body {
-    color: whitesmoke;
-    background-color: #040720;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar {
+\.navbar {
     display: flex;
-    flex-wrap: wrap;
     margin-bottom: 20px;
     justify-content: space-between;
-    align-items: center;
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #040720;
     color: #39FF14;
 }
-
-.nav-left, .nav-right {
+.nav-left {
     display: flex;
     align-items: center;
 }
-
+.nav-right {
+    display: flex;
+    align-items: center;
+}
 .nav-button {
     text-decoration: none;
     padding: 12px 22px;
@@ -34,43 +28,44 @@ body {
     margin-bottom: 20px;
     font-weight: bold;
 }
-
 .nav-text {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0px 17px 20px 40px;
+    margin:0px 17px 20px 40px;
 }
-
 .nav-text-image {
     margin-right: 5px;
     height: 80px;
     transform: rotate(2deg);
 }
-
 .nav-logo {
-    height: 80px; /* Adjusted for better responsiveness */
-    margin-left: 10px; /* Adjusted for better responsiveness */
+    height: 120px;
+    margin-left: 35px;
     margin-top: 0;
     margin-right: 0;
     margin-bottom: 0;
 }
+body {
+    color: whitesmoke;
+    background-color: #040720;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .content {
     text-align: center;
-    padding: 20px; /* Added padding for better spacing on mobile */
 }
 
 .main-text {
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 50px; /* Adjusted font size for better responsiveness */
+    font-size: 75px;
     text-align: center;
 }
 
 .sub-text {
     text-align: center;
     margin-top: 1%;
-    font-size: 20px; /* Adjusted font size for better responsiveness */
+    font-size: 25px;
     margin-bottom: 2px;
 }
 
@@ -94,15 +89,26 @@ body {
  
 .nav-title {
     color: #39FF14;
-    font-size: 30px; /* Adjusted font size for better responsiveness */
+    font-size: 40px;
 }
 
-@media (max-width: 600px) {
+@media ( max-width: 600px) {
     .main-text {
-        font-size: 30px;
+        margin-top: 50px;
+        font-size: 40px;
+        text-align: center;
     }
 
     .sub-text {
-        font-size: 15px;
+        margin-top: 35px;
+        font-size: 20px;
+    }
+
+    .nav-button,.nav-text {
+        display: none;
+    }
+
+    .main-button {
+        margin-top: 50px;
     }
 }
