--- a/login.css
+++ b/login.css
@@ -1,12 +1,10 @@
 #outline {
-    text-align: center;
-    height: 500px;
-    width: 400px;
     margin: 0;
     border-radius: 20px;
-    position: absolute;
-    margin-top: 80px; 
-    margin-left: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
