--- a/app.css
+++ b/app.css
@@ -63,6 +63,7 @@ ul {
 }
 
 li {
+    font-size: 18px;
     display: flex;
     justify-content: space-between; /* Ensures space between the content and the button */
     align-items: center; /* Aligns items vertically within the list item */
@@ -91,4 +92,51 @@ li:hover .delete-btn {
 
 .delete-btn:hover {
     background-color: #bf3336; /* Darker red on hover */
+}
+
+.checkbox {
+    width: 35px;
+    height: 35px;
+    background-color: white;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 3px solid #39FF14;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+  }
+
+.checkbox:checked {
+    background-color: #39FF14;
+}
+
+  .checkbox:checked::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media (max-width: 500px) {
+    input {
+        width: 490px;
+        height: 60px;
+    }
+
+    button {
+        height: 60px;
+        font-size: 20px;
+        font-weight: bolder;
+    }
+
+    .input-field {
+        margin-top: 100px;
+    }
 }
